  * Old partitioner: Work around yet another hard-to-explain crash due to a
    partition being missing from /proc/partitions (LP: #73058).
  * KDE frontend:
    - Disable subsidiary autopartitioning options according to the primary
      selection (thanks to Thorbjørn Tux for prompting me with suggestions;
      LP: #85980).

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 21 Mar 2007 15:34:17 +0000

ubiquity (1.4.3) feisty; urgency=low

  * Install dummy policy-rc.d and start-stop-daemon while doing anything
    that might install or remove packages in the target system, so that we
    don't try to run init scripts (LP: #89463).
  * Automatic update of included source packages: partman-partitioning
    47ubuntu3.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 21 Mar 2007 13:55:56 +0000

ubiquity (1.4.2) feisty; urgency=low

  [ Evan Dandrea ]
  * Update templates for migration-assistant.
  * Only seed migration-assistant in usersetup.py if there are partitions
    selected to import from. (LP: #93270)

  [ Colin Watson ]
  * KDE frontend:
    - Fix backup from autopartitioning step (LP: #92533).
    - Activate create/edit partition dialog when double-clicking a row in
      the partition list.
    - Fix backup from user/password page.
    - Add buttons to the partition list to make it more obvious what to do.
  * Automatic update of included source packages: console-setup 1.13ubuntu9,
    partman-auto 62ubuntu7, partman-partitioning 47ubuntu2.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 19 Mar 2007 20:39:46 +0000

ubiquity (1.4.1) feisty; urgency=low

  * Make the timezone database a singleton, saving about 2MB of memory.
  * Avoid storing temporary variables as members of the (long-lived)
    SystemTzInfo class.
  * Fix broken call to kboot-installer.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 15 Mar 2007 16:58:29 +0000

ubiquity (1.4.0) feisty; urgency=low

  [ Colin Watson ]
  * Use just one progress message for all target-config hooks, to avoid